# guardiannode

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  BUILD_WEEK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DEPENDENCY_POLICY.md  KNOWN_LIMITATIONS.md  LICENSE  MODEL_LICENSES.md  NOTICE  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  release-readiness-alpha.md
agent-windows/: README.md  entry_agent.py  entry_broker.py  entry_tray.py  entry_watchdog.py  guardiannode_agent.spec  pyproject.toml
agent-windows/ocr_regions/: chrome_generic.yaml  discord.yaml  roblox.yaml
agent-windows/policies/: default_policy.yaml
agent-windows/scripts/: verify_windows_bundle.ps1
agent-windows/src/: __init__.py  backend_client.py  broker_client.py  broker_protocol.py  broker_service.py  config.py  custom_uninstall.py  durable_queue.py  hardware_probe.py  main.py  ocr_engine.py  pairing_client.py  parent_auth.py  process_watcher.py  screenshot_capture.py  tray_app.py  watchdog.py  window_tracker.py
agent-windows/tests/: test_background_change_trigger.py  test_broker_protocol.py  test_broker_service.py  test_capture_privacy.py  test_cli_docs.py  test_config.py  test_durable_queue.py  test_hardware_probe.py  test_pairing_bootstrap.py  test_sender_retry.py  test_tray_auth.py  test_watchdog.py
backend/: README.md  guardiannode_backend.spec  pyinstaller_entry.py  pyproject.toml
backend/app/: __init__.py  demo_scenarios.py  guardian_review_evaluation.py  guardian_review_harness.py  guardian_review_models.py  hardware_tiers.py  main.py  preflight.py  settings.py
backend/app/api/: alerts.py  audit.py  auth.py  child_requests.py  dashboard.py  demo.py  deps.py  devices.py  events.py  guardian_review.py  health.py  models.py  policies.py  profiles.py  risks.py  setup.py  (+2 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_alert_dedup.py  test_alert_notify.py  test_api_health.py  test_archive_format.py  test_classifier.py  test_csrf.py  test_db_session.py  test_demo.py  test_device_auth.py  test_device_heartbeat.py  test_device_pause.py  test_encryption.py  test_export.py  test_guardian_review.py  test_guardian_review_evaluation.py  test_image_mime.py  test_image_safety.py  test_input_bounds.py  test_migrations_and_readiness.py  test_model_fallback.py  test_offline_monitor.py  test_ollama_client.py  test_pairing_concurrency.py  test_pairing_local_bootstrap.py  test_pipeline_readiness.py  test_preflight.py  test_profile_policy.py  test_profile_resolution.py  test_purge_cascade.py  test_rate_limit.py  test_readiness_apis.py  test_redaction.py  test_retention_and_notifications.py  test_rules.py  test_safety_corpus.py  test_screenshot_async.py  test_screenshot_async_retry.py  test_screenshot_rules_floor.py  test_session_security.py  (+3 more)
(+305 files in other folders)
