[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardiannode-agent"
version = "0.1.0a1"
description = "GuardianNode Windows agent (and Linux-development build)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
dependencies = [
  "httpx>=0.27,<1.0",
  "pyyaml>=6.0,<7.0",
  "psutil>=5.9,<8.0",
  "mss>=9.0,<11.0",
  "Pillow>=12.2,<13.0",
  "pydantic>=2.5,<3.0",
  "argon2-cffi>=23.1,<26.0",
  "cryptography>=48.0.1,<50.0",
  "python-ulid>=2.2,<4.0",
  "zeroconf>=0.131,<1.0",
]

[project.optional-dependencies]
windows = [
  "pywin32>=306",
  "pystray>=0.19,<1.0",
]
ocr = [
  "opencv-python>=4.8,<5.0",
  "pytesseract>=0.3.10",
  # paddleocr is heavy and optional; users install via the OCR setup wizard
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
]

[project.scripts]
guardiannode-agent = "src.main:cli"
guardiannode-broker = "src.broker_service:cli"
guardiannode-watchdog = "src.watchdog:cli"
guardiannode-tray = "src.tray_app:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "error::ResourceWarning",
  "error::pytest.PytestUnraisableExceptionWarning",
]
