[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardiannode-backend"
version = "0.1.0a1"
description = "GuardianNode local-first backend for parental safety monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
authors = [{name = "GuardianNode Contributors"}]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "cryptography>=48.0.1,<50.0",
  "argon2-cffi>=23.1,<26.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "zeroconf>=0.131,<1.0",
  "qrcode[pil]>=7.4,<9.0",
  "Pillow>=12.2,<13.0",
  "pytesseract>=0.3.10,<1.0",
  "python-ulid>=2.2,<4.0",
  "itsdangerous>=2.1,<3.0",
  "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "ruff>=0.3",
  "mypy>=1.8",
]

[project.scripts]
guardiannode-backend = "app.main:cli"
guardiannode-db = "app.db.maintenance:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]
